# tspi-lvgl-edp-drm

./: .gitignore  CMakeLists.txt  README.md  lv_drv_conf.h  main.c  toolchain-aarch64-gnu.cmake
cmake/: find_library.cmake  toolchain-aarch64-gnu.cmake
gui_guider/: CMakeLists.txt
lv_linux_port/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h
